<resources>
    <string name="app_name">Wrestling</string>
    <string name="technical">Technical</string>
    <string name="pin">Pin</string>
    <string name="major_decision">Major Decision</string>
    <string name="visitor">Visitor</string>
    <string name="home">Home</string>
    <string name="regular_decision">Regular Decision</string>
    <string name="forfeit_injury_dq">Forfeit, Injury, DQ</string>
    <string name="reset">reset</string>
    <string name="_0">0</string>
    <string name="description">Image of 2 boys wrestling</string>
</resources>
