<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F5"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/wrestlers"
            android:layout_margin="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/home"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/home_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded_corners_red"
                    android:onClick="addPinPointsHome"
                    android:text="@string/pin"
                    android:textColor="@color/red_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded_corners_red"
                    android:onClick="addTechnicalPointsHome"
                    android:text="@string/technical"
                    android:textColor="@color/red_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded_corners_red"
                    android:onClick="addMajorPointsHome"
                    android:text="@string/major_decision"
                    android:textColor="@color/red_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded_corners_red"
                    android:onClick="addRegularPointsHome"
                    android:text="@string/regular_decision"
                    android:textColor="@color/red_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded_corners_red"
                    android:onClick="addForfeitPointsHome"
                    android:text="@string/forfeit_injury_dq"
                    android:textColor="@color/red_text" />

            </LinearLayout>

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/visitor"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/visitor_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="@android:color/black"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded_blue"
                    android:onClick="addPinPointsVisitor"
                    android:text="@string/pin"
                    android:textColor="@color/blue_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded_blue"
                    android:onClick="addTechnicalPointsVisitor"
                    android:text="@string/technical"
                    android:textColor="@color/blue_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded_blue"
                    android:onClick="addMajorPointsVisitor"
                    android:text="@string/major_decision"
                    android:textColor="@color/blue_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_rounded_blue"
                    android:onClick="addRegularPointsVisitor"
                    android:text="@string/regular_decision"
                    android:textColor="@color/blue_text" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_rounded_blue"
                    android:onClick="addForfeitPointsVisitor"
                    android:text="@string/forfeit_injury_dq"
                    android:textColor="@color/blue_text" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:background="@drawable/button_rounded"
            android:onClick="resetScore"
            android:text="@string/reset" />

    </LinearLayout>
</ScrollView>